--- a/scss/layout/_all.scss
+++ b/scss/layout/_all.scss
@@ -2,3 +2,10 @@
 //  Import all layout parts.																					//
 // 	Layout parts define the structural parts and their relationship.  //
 //====================================================================//
+
+@import
+	"app",
+	"view",
+	"list",
+	"menu",
+	"chat";
