--- a/scss/init/_constants.scss
+++ b/scss/init/_constants.scss
@@ -3,7 +3,10 @@
 //-------------//
 
 // Sizes
-
+$height-topbar: 60px;
+$height-bottombar: 60px;
+$height-listitem: 60px;
+$padding-default: 10px;
 
 // Font families
 
