--- a/scss/init/_webfonts.scss
+++ b/scss/init/_webfonts.scss
@@ -1,3 +1,5 @@
-//------------//
-//  Webfonts  //
-//------------//
+/*--------------
+    Webfonts  
+--------------*/
+
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,300,400);
