--- a/scss/modules/_all.scss
+++ b/scss/modules/_all.scss
@@ -2,3 +2,6 @@
 //  Import all modules.																			 //
 // 	Modules are reusable parts such as buttons, callouts...  //
 //===========================================================//
+
+@import
+	"message";
