--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 /*--------------
-	Base imports
+    Webfonts  
 --------------*/
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,300,400);
 /*---------------------
 	Compass reset rules
 ---------------------*/
@@ -92,7 +93,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   background: #EB1C24;
 }
 
-/* line 23, ../scss/_base.scss */
+/* line 22, ../scss/_base.scss */
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+/* line 28, ../scss/_base.scss */
 body {
   background-color: white;
 }
@@ -100,7 +107,53 @@ body {
 /*-----------------
 	Base typography
 -----------------*/
-/* line 32, ../scss/_base.scss */
+/* line 37, ../scss/_base.scss */
 body {
+  font-family: 'Open Sans', sans-serif;
   font-size: 62.5%;
+}
+
+/* line 1, ../scss/layout/_app.scss */
+#app {
+  height: 100%;
+}
+
+/* line 1, ../scss/layout/_view.scss */
+.view {
+  overflow: hidden;
+  height: 100%;
+}
+
+/* line 6, ../scss/layout/_view.scss */
+.view-topbar {
+  height: 60px;
+}
+
+/* line 10, ../scss/layout/_view.scss */
+.view-body {
+  height: calc(100% - (60px + 60px));
+  overflow-y: auto;
+}
+
+/* line 15, ../scss/layout/_view.scss */
+.view-bottombar {
+  height: 60px;
+}
+
+/* line 5, ../scss/layout/_list.scss */
+.list-item {
+  height: 60px;
+  padding: 10px;
+}
+
+/* line 1, ../scss/layout/_menu.scss */
+.view_menu {
+  width: 100%;
+  max-width: 240px;
+  float: left;
+}
+
+/* line 1, ../scss/modules/_message.scss */
+.message {
+  padding: 10px;
 }
