--- a/scss/init/_constants.scss
+++ b/scss/init/_constants.scss
@@ -14,6 +14,7 @@ $padding-default: 10px;
 // Colors
 $color-background: white;
 $color-textSelect: #EB1C24;
+$color-bodyVague: #AAA;
 
 // Other
 $border-ui: 1px #DDD solid;
