--- a/scss/init/_init.scss
+++ b/scss/init/_init.scss
@@ -6,7 +6,8 @@
 //  Compass utilities  //
 //---------------------//
 @import 
-	"compass/css3";
+	"compass/css3",
+	"compass/css3/user-interface";
 
 //-----------------------//
 //  Project definitions  //
