--- a/scss/placeholders/_all.scss
+++ b/scss/placeholders/_all.scss
@@ -2,4 +2,5 @@
 //  Import all placeholders.	//
 //============================//
 @import
-	"placeholders/hide-text";
+	"hide-text",
+	"selectable";
