Removed faulty class from template
Signed-off-by: Joeri Bakker <bakkerjoeri@gmail.com>

--- a/templates/newConversation.html
+++ b/templates/newConversation.html
@@ -21,7 +21,7 @@
 	</div>
 </div>
 
-<div class="view-bottombar view_new-conversation-bottombar screen-navigation">
+<div class="view-bottombar view_new-conversation-bottombar">
 	<button class="button button-create-conversation is-disabled">
 		Create conversation
 	</button>
