--- a/templates/newConversation.html
+++ b/templates/newConversation.html
@@ -1,19 +1,19 @@
 <div class="view-topbar view_new-conversation-topbar">
-	<button class="button button-cancel">
+	<button class="button button_cancel">
 		Cancel
 	</button>
 
-	<p class="view-title">
+	<span class="view-title">
 		New conversation
-	</p>
+	</span>
 </div>
 
 <div class="view-body view_new-conversation-body">
-	<input class="input-groupname" type="text" placeholder="Group name" />
+	<input class="input input_groupname is-hidden" type="text" placeholder="Group name"/>
 
 	<div class="list list_select-users">
 		<% _.each(selectableUsers, function (user) { %>
-			<input type="checkbox" id="user-<%- user.id %>"/>
+			<input type="checkbox" id="user-<%- user.id %>" data-user-id="<%- user.id %>" class="selectable-user"/>
 			<label for="user-<%- user.id %>">
 				<%- user.name %>
 			</label>
@@ -22,7 +22,7 @@
 </div>
 
 <div class="view-bottombar view_new-conversation-bottombar">
-	<button class="button button-create-conversation is-disabled">
+	<button class="button button_create-conversation is-disabled">
 		Create conversation
 	</button>
 </div>
