Removed placeholder menu
Signed-off-by: Joeri Bakker <bakkerjoeri@gmail.com>

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -12,13 +12,5 @@
 	
 </div>
 
-<nav class="view-bottombar view_menu-bottombar screen-navigation">
-	<ul>
-		<li>
-			Contacts
-		</li>
-		<li>
-			Conversations
-		</li>
-	</ul>
-</nav>
+<div class="view-bottombar view_menu-bottombar">
+</div>
