--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -1,5 +1,23 @@
 .view_menu {
+	z-index: 10;
 	width: 100%;
-	max-width: 240px;
+	max-width: $width-menu;
 	float: left;
+
+	@media #{$media-phone} {
+		max-width: 100%;
+
+		@include transition-property(margin-left, opacity);
+		@include transition-duration(0.2s);
+
+		// Closed state
+		margin-left: -100%;
+		@include opacity(0);
+
+		// Open state
+		&.is-open {
+			margin-left: 0;
+			@include opacity(1);
+		}
+	}
 }
