Revert "Menu open & closed states"
This reverts commit e3dc5989dd10a32821b9e996101ced8ea76764ce.

--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -1,23 +1,5 @@
 .view_menu {
-	z-index: 10;
 	width: 100%;
-	max-width: $width-menu;
+	max-width: 240px;
 	float: left;
-
-	@media #{$media-phone} {
-		max-width: 100%;
-
-		@include transition-property(margin-left, opacity);
-		@include transition-duration(0.2s);
-
-		// Closed state
-		margin-left: -100%;
-		@include opacity(0);
-
-		// Open state
-		&.is-open {
-			margin-left: 0;
-			@include opacity(1);
-		}
-	}
 }
