--- a/scss/modules/_chat.scss
+++ b/scss/modules/_chat.scss
@@ -18,6 +18,10 @@
 	}
 }
 
+.view_chat-body {
+	padding: $padding-default 30px;
+}
+
 .view_chat-bottombar {
 	border-top: $border-ui;
 	padding: $padding-default;
