--- a/style/style.css
+++ b/style/style.css
@@ -188,6 +188,11 @@ body {
   }
 }
 
+/* line 25, ../scss/layout/_menu.scss */
+.view_menu-body {
+  height: calc(100% - (60px));
+}
+
 /* line 1, ../scss/layout/_chat.scss */
 .view_chat {
   min-width: 300px;
@@ -214,63 +219,121 @@ body {
   border-top: 1px #DDD solid;
 }
 
+/* line 1, ../scss/modules/_chat.scss */
+.view_chat {
+  min-width: 300px;
+}
+
 /* line 5, ../scss/modules/_chat.scss */
 .view_chat-topbar {
   border-bottom: 1px #DDD solid;
   padding: 10px;
+  background-color: #FAFAFC;
 }
-/* line 9, ../scss/modules/_chat.scss */
+/* line 10, ../scss/modules/_chat.scss */
 .view_chat-topbar .chat-conversation-name,
 .view_chat-topbar .chat-conversation-meta {
   display: block;
   width: 100%;
   text-align: center;
 }
-/* line 16, ../scss/modules/_chat.scss */
+/* line 17, ../scss/modules/_chat.scss */
 .view_chat-topbar .chat-conversation-meta {
-  color: #999;
+  color: #BBB;
 }
 
-/* line 21, ../scss/modules/_chat.scss */
+/* line 22, ../scss/modules/_chat.scss */
 .view_chat-body {
   padding: 10px 30px;
 }
 
-/* line 25, ../scss/modules/_chat.scss */
+/* line 26, ../scss/modules/_chat.scss */
 .view_chat-bottombar {
   border-top: 1px #DDD solid;
   padding: 10px;
+  background-color: #FAFAFC;
 }
 
 /* line 1, ../scss/modules/_message.scss */
 .message {
   padding: 10px;
+  display: block;
+}
+@media screen and (max-width: 500px) {
+  /* line 1, ../scss/modules/_message.scss */
+  .message {
+    margin-bottom: 10px;
+    max-width: 60%;
+    min-width: 25%;
+    clear: both;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    float: left;
+    color: white;
+    background-color: #4279FC;
+  }
+  /* line 20, ../scss/modules/_message.scss */
+  .message .message-sent-by {
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+    opacity: 0.7;
+  }
+  /* line 25, ../scss/modules/_message.scss */
+  .message.by-owner {
+    float: right;
+    color: inherit;
+    background-color: #EFEFF9;
+  }
+  /* line 31, ../scss/modules/_message.scss */
+  .message.by-owner .message-sent-timestamp {
+    text-align: right;
+  }
+  /* line 35, ../scss/modules/_message.scss */
+  .message.by-owner .message-sent-by {
+    filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+    opacity: 1;
+  }
+}
+
+/* line 42, ../scss/modules/_message.scss */
+.message-sent-by {
+  font-size: 1.2em;
+  font-weight: 600;
+  line-height: 1.5em;
+}
+@media screen and (min-width: 501px) {
+  /* line 42, ../scss/modules/_message.scss */
+  .message-sent-by {
+    color: #4279FC;
+  }
+}
+
+/* line 52, ../scss/modules/_message.scss */
+.by-owner .message-sent-by {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+  opacity: 0.4;
 }
 
 @media screen and (max-width: 500px) {
-  /* line 5, ../scss/modules/_message.scss */
+  /* line 56, ../scss/modules/_message.scss */
   .by-owner .message-sent-by,
   .is-personal .message-sent-by {
     display: none;
   }
 }
 
-/* line 12, ../scss/modules/_message.scss */
-.message-sent-by {
-  font-size: 1.4em;
-  font-weight: 600;
-  line-height: 1.5em;
-}
-
-/* line 18, ../scss/modules/_message.scss */
+/* line 63, ../scss/modules/_message.scss */
 .message-body {
-  font-size: 1.4em;
+  font-size: 1.2em;
   line-height: 1.5em;
 }
 
-/* line 25, ../scss/modules/_message.scss */
+/* line 70, ../scss/modules/_message.scss */
 .message-sent-timestamp {
-  color: #999;
+  display: block;
+  font-size: 1.1em;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  opacity: 0.5;
   line-height: 1.5em;
 }
 
@@ -292,34 +355,34 @@ body {
 .conversation-item {
   cursor: pointer;
   overflow: hidden;
-  padding: 10px;
+  padding: 20px 10px;
 }
-/* line 16, ../scss/modules/_list.scss */
+/* line 15, ../scss/modules/_list.scss */
 .conversation-item .conversation-item-name,
 .conversation-item .message-preview,
 .conversation-item .message-timestamp {
   line-height: 1.5em;
 }
-/* line 22, ../scss/modules/_list.scss */
+/* line 21, ../scss/modules/_list.scss */
 .conversation-item .conversation-item-name {
   display: block;
   font-size: 1.2em;
 }
-/* line 27, ../scss/modules/_list.scss */
+/* line 26, ../scss/modules/_list.scss */
 .conversation-item .message-preview,
 .conversation-item .message-timestamp {
-  color: #999;
+  color: #BBB;
   overflow: hidden;
   white-space: nowrap;
 }
-/* line 34, ../scss/modules/_list.scss */
+/* line 33, ../scss/modules/_list.scss */
 .conversation-item .message-preview {
   float: left;
   max-width: 70%;
   font-size: 1.1em;
   text-overflow: ellipsis;
 }
-/* line 42, ../scss/modules/_list.scss */
+/* line 41, ../scss/modules/_list.scss */
 .conversation-item .message-timestamp {
   float: right;
   max-width: 30%;
@@ -327,12 +390,12 @@ body {
   text-align: right;
 }
 @media screen and (min-width: 501px) {
-  /* line 50, ../scss/modules/_list.scss */
+  /* line 49, ../scss/modules/_list.scss */
   .conversation-item.is-selected {
     background-color: #D1685F;
     color: white;
   }
-  /* line 55, ../scss/modules/_list.scss */
+  /* line 54, ../scss/modules/_list.scss */
   .conversation-item.is-selected .message-preview,
   .conversation-item.is-selected .message-timestamp {
     color: white;
