--- a/scss/modules/_menu.scss
+++ b/scss/modules/_menu.scss
@@ -4,6 +4,13 @@
 
 .view_menu-topbar {
 	border-bottom: $border-ui;
+
+	.username {
+		display: block;
+		font-size: 1.6em;
+		text-align: center;
+
+	}
 }
 
 .view_menu-bottombar {
