--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,11 +1,10 @@
 <div class="view-topbar view_menu-topbar">
+	<button class="button button_new-conversation">
+		New conversation
+	</button>
 	<span class="username">
 		<%- username %>
 	</span>
-
-	<button class="button button-new-conversation">
-		New conversation
-	</button>
 </div>
 
 <div class="view-body view_menu-body">
