--- a/scss/modules/_list.scss
+++ b/scss/modules/_list.scss
@@ -10,7 +10,7 @@
 	cursor: pointer;
 	overflow: hidden;
 
-	padding: $padding-medium $padding-default;
+	padding: 15px;
 
 	.conversation-item-name,
 	.message-preview,
@@ -20,7 +20,7 @@
 
 	.conversation-item-name {
 		display: block;
-		font-size: 1.2em;
+		font-size: 1.4em;
 	}
 
 	.message-preview, 
@@ -34,7 +34,7 @@
 		float: left;
 		max-width: 70%;
 
-		font-size: 1.1em;
+		font-size: 1.2em;
 		text-overflow: ellipsis;
 	}
 
@@ -42,13 +42,13 @@
 		float: right;
 		max-width: 30%;
 
-		font-size: 1.0em;
+		font-size: 1.1em;
 		text-align: right;
 	}
 
 	&.is-selected {
 		@media #{$media-desktop} {
-			background-color: $color-highlight;
+			background-color: $color-blue;
 			color: $color-bodyLight;
 
 			.message-preview,
