--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,7 +2,7 @@
 	<button class="button button_new-conversation">
 		New conversation
 	</button>
-	<span class="username">
+	<span class="username view-title">
 		<%- username %>
 	</span>
 </div>
